--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <title>WellBridge Social | Event & Conference Venue</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
 
   <!-- HEADER -->
-  <header class="site-header">
+  <header class="site-header" data-cms="header">
     <div class="container header-inner">
       <div class="brand">
-        <img src="images/logo.png" alt="WellBridge Social logo" class="logo" />
+        <img src="images/logo.png" alt="WellBridge Social logo" class="logo" data-field="logo" />
       </div>
 
       <nav class="main-nav">
@@ -29,48 +30,61 @@
     </div>
   </header>
 
+
   <main>
 
     <!-- HERO -->
-    <section id="hero" class="hero reveal">
+    <section id="hero" class="hero reveal" data-cms="hero">
       <div class="hero-overlay">
         <div class="container hero-content">
-          <p class="eyebrow">Birmingham, AL • Forestdale</p>
-          <h1>Beautiful, flexible<br />space for your next<br />event.</h1>
-          <p class="hero-subtitle">
+
+          <p class="eyebrow" data-field="hero_location">Birmingham, AL • Forestdale</p>
+
+          <h1 data-field="hero_title">
+            Beautiful, flexible<br />space for your next<br />event.
+          </h1>
+
+          <p class="hero-subtitle" data-field="hero_subtitle">
             Host showers, birthday parties, meetings, repasts, and more at WellBridge Social.
             Two rooms, simple pricing, and a welcoming atmosphere.
           </p>
+
           <div class="hero-actions">
             <a href="#rental-info" class="btn btn-primary">View Rental Options</a>
             <a href="#contact" class="btn btn-outline">Check Date Availability</a>
           </div>
-          <p class="hero-contact">
+
+          <p class="hero-contact" data-field="hero_contact">
             Call or text <strong>205-504-6812</strong> to get started.
           </p>
         </div>
       </div>
     </section>
 
-    <!-- ABOUT / WELCOME -->
-    <section id="about" class="section reveal">
+
+    <!-- ABOUT -->
+    <section id="about" class="section reveal" data-cms="about">
       <div class="container two-column">
         <div>
-          <h2>Welcome to WellBridge Social</h2>
-          <p>
+          <h2 data-field="about_title">Welcome to WellBridge Social</h2>
+
+          <p data-field="about_paragraph1">
             WellBridge Social is a locally owned event and conference venue in Birmingham, AL,
             operated by <strong>Lynn Wilkerson</strong>. Our goal is to make hosting your event
             simple, affordable, and stress-free.
           </p>
-          <p>
+
+          <p data-field="about_paragraph2">
             With two flexible spaces, included tables and chairs, and optional linen rentals,
             you can style the room to match your colors and theme. Bring your own planner,
             caterer, DJ, and décor—or keep it simple and intimate.
           </p>
         </div>
+
         <div class="card">
-          <h3>Venue Details</h3>
-          <ul>
+          <h3 data-field="about_details_title">Venue Details</h3>
+
+          <ul data-field="about_details_list">
             <li>Located at <strong>1633 Forestdale Blvd, Birmingham, AL</strong></li>
             <li>Large room for up to <strong>100 guests</strong></li>
             <li>Small room for up to <strong>50 guests</strong></li>
@@ -81,44 +95,50 @@
       </div>
     </section>
 
+
     <!-- PREVIOUS EVENTS -->
-    <section id="previous-events" class="section section-alt reveal">
+    <section id="previous-events" class="section section-alt reveal" data-cms="previous_events">
       <div class="container">
         <div class="section-header">
-          <h2>Previous Events</h2>
-          <p>Gallery coming soon as we add photos from upcoming events.</p>
+          <h2 data-field="previous_events_title">Previous Events</h2>
+          <p data-field="previous_events_subtitle">
+            Gallery coming soon as we add photos from upcoming events.
+          </p>
         </div>
       </div>
     </section>
 
+
     <!-- RENTAL INFO -->
-    <section id="rental-info" class="section reveal">
+    <section id="rental-info" class="section reveal" data-cms="rental_info">
       <div class="container">
+
         <div class="section-header">
-          <h2>2026 Rental Information</h2>
-          <p>Clear pricing for both the large and small rooms.</p>
+          <h2 data-field="rental_title">2026 Rental Information</h2>
+          <p data-field="rental_subtitle">Clear pricing for both the large and small rooms.</p>
         </div>
 
-        <p class="center-text">
+        <p class="center-text" data-field="rental_description">
           Pricing is based on room size, event type, day of the week, time needed,
           number of guests, linen rental, and whether alcohol will be served.
         </p>
 
-        <div class="info-note">
-          <strong>All rentals are for up to 8 hours.</strong> Additional time is
-          <strong>$100 per hour</strong>. Events must end on time; setup and cleanup
-          are included in your 8-hour window.
+        <div class="info-note" data-field="rental_note">
+          <strong>All rentals are for up to 8 hours.</strong>
+          Additional time is <strong>$100 per hour</strong>.
+          Events must end on time; setup and cleanup are included.
         </div>
 
+
+        <!-- Pricing Grid -->
         <div class="pricing-grid">
-          <div class="pricing-card">
-            <h3>Large Room</h3>
-            <p class="capacity">Up to 100 guests</p>
-            <ul>
-              <li>
-                <span>Day events (9 AM – 5 PM)</span>
-                <strong>$700</strong>
-              </li>
+
+          <div class="pricing-card" data-cms="large_room">
+            <h3 data-field="large_room_title">Large Room</h3>
+            <p class="capacity" data-field="large_room_capacity">Up to 100 guests</p>
+
+            <ul data-field="large_room_pricing">
+              <li><span>Day events (9 AM – 5 PM)</span> <strong>$700</strong></li>
               <li>
                 <span>Evening events (8 hours)</span>
                 <strong>$900</strong>
@@ -127,14 +147,13 @@
             </ul>
           </div>
 
-          <div class="pricing-card">
-            <h3>Small Room</h3>
-            <p class="capacity">Up to 50 guests</p>
-            <ul>
-              <li>
-                <span>Day events (9 AM – 5 PM)</span>
-                <strong>$600</strong>
-              </li>
+
+          <div class="pricing-card" data-cms="small_room">
+            <h3 data-field="small_room_title">Small Room</h3>
+            <p class="capacity" data-field="small_room_capacity">Up to 50 guests</p>
+
+            <ul data-field="small_room_pricing">
+              <li><span>Day events (9 AM – 5 PM)</span> <strong>$600</strong></li>
               <li>
                 <span>Evening events (8 hours)</span>
                 <strong>$700</strong>
@@ -142,77 +161,97 @@
               </li>
             </ul>
           </div>
+
         </div>
 
+
+        <!-- Clean Up + Linen Columns -->
         <div class="two-column details-grid">
-          <div>
-            <h3>Clean Up Deposit</h3>
-            <p>
+
+          <div data-cms="cleanup">
+            <h3 data-field="cleanup_title">Clean Up Deposit</h3>
+            <p data-field="cleanup_paragraph1">
               A refundable <strong>$100 clean up deposit</strong> is required before your event.
-              It will be returned if:
             </p>
-            <ul>
+
+            <ul data-field="cleanup_rules">
               <li>Floors and tables are free of debris</li>
               <li>Trash is bagged and placed in provided cans</li>
               <li>Decorations are removed and broken down</li>
               <li>Breakdown is completed within your rental time</li>
             </ul>
-            <p>If not, the deposit will be forfeited.</p>
+
+            <p data-field="cleanup_paragraph2">If not, the deposit will be forfeited.</p>
           </div>
 
-          <div>
-            <h3>Tables, Chairs &amp; Linen</h3>
-            <p><strong>Included with all rentals:</strong></p>
-            <ul>
+
+          <div data-cms="linen">
+            <h3 data-field="linen_title">Tables, Chairs &amp; Linen</h3>
+
+            <p data-field="linen_included_title"><strong>Included with all rentals:</strong></p>
+
+            <ul data-field="linen_included_list">
               <li>60" round tables</li>
               <li>6 ft tables</li>
               <li>Folding chairs</li>
             </ul>
+
             <p><strong>Linen rentals:</strong></p>
-            <ul>
+
+            <ul data-field="linen_prices">
               <li>Polyester tablecloths – $8 each</li>
               <li>Chair covers &amp; sashes – $1 each</li>
               <li>Overlays – $4 each</li>
               <li>Runners – $3 each</li>
               <li>Specialty cloths – $15 each</li>
             </ul>
-            <p>We set up and take down all rented linen for you.</p>
+
+            <p data-field="linen_paragraph2">
+              We set up and take down all rented linen for you.
+            </p>
           </div>
+
         </div>
 
-        <div class="info-note">
-          <h3>Alcohol &amp; Security</h3>
-          <p>
+
+        <!-- Alcohol Note -->
+        <div class="info-note" data-cms="alcohol">
+          <h3 data-field="alcohol_title">Alcohol &amp; Security</h3>
+          <p data-field="alcohol_paragraph1">
             If you have more than 50 guests and serve alcohol (BYOB or open bar),
             the City of Adamsville requires a police officer on site.
           </p>
-          <p>
+          <p data-field="alcohol_paragraph2">
             To arrange and pay for an officer, please contact the City of Adamsville at
             <strong>205-674-5671</strong>.
           </p>
         </div>
+
       </div>
     </section>
 
-    <!-- PLAN YOUR EVENT -->
-    <section id="plan-event" class="section section-alt reveal">
+
+    <!-- PLAN EVENT -->
+    <section id="plan-event" class="section section-alt reveal" data-cms="plan">
       <div class="container">
         <div class="section-header">
-          <h2>Plan Your Event</h2>
-          <p>We keep the process simple so you can focus on celebrating.</p>
+          <h2 data-field="plan_title">Plan Your Event</h2>
+          <p data-field="plan_subtitle">We keep the process simple so you can focus on celebrating.</p>
         </div>
 
-        <div class="steps-grid">
+        <div class="steps-grid" data-field="plan_steps">
           <div class="step-card">
             <span class="step-number">1</span>
             <h3>Check Your Date</h3>
             <p>Send your preferred date, time frame, and guest count.</p>
           </div>
+
           <div class="step-card">
             <span class="step-number">2</span>
             <h3>Reserve Your Room</h3>
             <p>Secure your date with a 50% deposit and a signed agreement.</p>
           </div>
+
           <div class="step-card">
             <span class="step-number">3</span>
             <h3>Bring Your Vision</h3>
@@ -222,74 +261,86 @@
       </div>
     </section>
 
+
     <!-- FAQ -->
-    <section id="faq" class="section reveal">
+    <section id="faq" class="section reveal" data-cms="faq">
       <div class="container">
         <div class="section-header">
-          <h2>FAQ's</h2>
-          <p>Answers to a few common questions about renting the venue.</p>
+          <h2 data-field="faq_title">FAQ's</h2>
+          <p data-field="faq_subtitle">Answers to a few common questions about renting the venue.</p>
         </div>
 
-        <div class="faq-list">
+        <div class="faq-list" data-field="faq_items">
           <details>
             <summary>Can I bring my own food and cake?</summary>
             <p>Yes. Outside food, cake, and caterers are welcome.</p>
           </details>
+
           <details>
             <summary>Can I bring a DJ and loud music?</summary>
             <p>Yes, as long as building rules and quiet hours are respected.</p>
           </details>
+
           <details>
             <summary>Do you offer tours?</summary>
             <p>Yes. Contact us to schedule a walk-through of the space.</p>
           </details>
+
           <details>
             <summary>Do you provide décor?</summary>
-            <p>
-              We provide tables, chairs, and linen rentals. All additional décor is
-              provided by you or your planner.
-            </p>
+            <p>We provide tables, chairs, and linen rentals. All additional décor is provided by you.</p>
           </details>
         </div>
+
       </div>
     </section>
 
+
     <!-- HOW IT STARTED -->
-    <section id="how-started" class="section section-alt reveal">
+    <section id="how-started" class="section section-alt reveal" data-cms="how_started">
       <div class="container two-column">
+
         <div>
-          <h2>How It Started</h2>
-          <p>
+          <h2 data-field="how_started_title">How It Started</h2>
+
+          <p data-field="how_started_paragraph1">
             WellBridge Social was created by <strong>Lynn Wilkerson</strong> as a warm,
             flexible gathering space for families and organizations in Birmingham.
           </p>
-          <p>
+
+          <p data-field="how_started_paragraph2">
             From baby showers to repasts, Lynn’s goal is for every guest to feel welcome
             and every event to feel cared for.
           </p>
         </div>
+
         <div class="card">
-          <h3>Our Commitment</h3>
-          <ul>
+          <h3 data-field="commitment_title">Our Commitment</h3>
+
+          <ul data-field="commitment_list">
             <li>Clear, honest pricing</li>
             <li>Clean, ready-to-use space</li>
             <li>Friendly and responsive communication</li>
             <li>A venue that feels like “yours” for the day</li>
           </ul>
         </div>
+
       </div>
     </section>
 
+
     <!-- CONTACT -->
-    <section id="contact" class="section reveal">
+    <section id="contact" class="section reveal" data-cms="contact">
+
       <div class="container">
+
         <div class="section-header">
-          <h2>Contact Us</h2>
-          <p>Ready to check a date or ask a question? Reach out below.</p>
+          <h2 data-field="contact_title">Contact Us</h2>
+          <p data-field="contact_subtitle">Ready to check a date or ask a question? Reach out below.</p>
         </div>
 
         <div class="contact-grid">
-          <!-- Netlify form: sends to backend, no email app -->
+
           <form
             id="contactForm"
             class="contact-form"
@@ -300,6 +351,7 @@
             action="/thank_you.html"
           >
             <input type="hidden" name="form-name" value="contact" />
+
             <p class="hidden">
               <label>Don’t fill this out: <input name="bot-field" /></label>
             </p>
@@ -333,35 +385,45 @@
             <button class="btn btn-primary" type="submit">Send Message</button>
           </form>
 
+
           <div class="card">
-            <h3>Venue Information</h3>
-            <p>
+            <h3 data-field="venue_info_title">Venue Information</h3>
+
+            <p data-field="venue_info_text">
               <strong>WellBridge Social</strong><br />
               1633 Forestdale Blvd<br />
               Birmingham, AL
             </p>
+
             <p><strong>Phone:</strong> <a href="tel:12055046812">205-504-6812</a></p>
-            <p>
+
+            <p data-field="venue_info_note">
               Please include your date and estimated guest count for a quicker response.
             </p>
+
             <p class="text-links">
               Prefer to call or text directly?<br />
               <a href="tel:12055046812">Call</a> •
               <a href="sms:12055046812">Text</a>
             </p>
           </div>
+
         </div>
+
       </div>
+
     </section>
 
   </main>
 
+
   <!-- FOOTER -->
-  <footer class="footer">
+  <footer class="footer" data-cms="footer">
     <div class="container footer-inner">
       <p>&copy; <span id="year"></span> WellBridge Social. All rights reserved.</p>
     </div>
   </footer>
+
 
   <script src="script.js"></script>
 </body>
