--- a/admin/index.html
+++ b/admin/index.html
@@ -6,6 +6,7 @@
 
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
+    <link rel="stylesheet" href="admin.css" />
     <style>
       body {
         margin: 0;
